first working java 10